# golf-score-fetch-analyer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: principal-software-engineer.agent.md  se-gitops-ci-specialist.agent.md  se-technical-writer.agent.md  se-ux-ui-designer.agent.md  software-engineer-agent-v1.agent.md
.github/instructions/: general.instructions.md  marimo-notebook-assistant.instructions.md  playwright-python.instructions.md  python.instructions.md
data/: golf_place_name_mapping.json  prefecture_mapping.yaml
debug/: .gitkeep
docs/: DEBUGGING.md  DESIGN.md  FEATURE_DESIGN_ONEON_RATE.md  同伴者表記ゆれ.md
notebooks/: score_analysis.py
output/: .gitkeep
src/gdo_score/: __init__.py  __main__.py  auth.py  browser.py  cli.py  config.py  models.py  normalizer.py  output.py  scraper.py  selectors.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_output.py
