[project]
name = "gdo-score"
version = "0.1.0"
description = "GDOスコアサイトからゴルフスコア情報を自動取得するツール"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Yuya Ono" }]
keywords = ["golf", "gdo", "score", "scraping", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "playwright>=1.57.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.0",
]

[project.scripts]
gdo-score = "gdo_score.__main__:main"

[project.urls]
Repository = "https://github.com/romancek/get-gdo-score"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdo_score"]

[project.optional-dependencies]
analysis = [
    "marimo>=0.13.0",
    "polars>=1.0.0",
    "altair>=5.0.0",
    "pyarrow>=15.0.0",
    "vega_datasets>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-playwright>=0.7.0",
    "ruff>=0.14.0",
    "ty>=0.0.13",
    "pre-commit>=4.5.0",
]

# Ruff設定
[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests", "notebooks"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B018",
    "RUF003",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["gdo_score"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["B018", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ty設定
[tool.ty.environment]
python-version = "3.14"

# pytest設定
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
